{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 76,
  "lineage": "161d3526-2406-f66b-909b-150b61c6e236",
  "resources": [
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:101031881943:instance/i-0093fe0fd17cde604",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jenkins-ec2-instance-profile",
            "id": "i-0093fe0fd17cde604",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "airbus-jenkins",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-046e7d9ab42189479",
            "private_dns": "ip-172-31-16-33.ec2.internal",
            "private_ip": "172.31.16.33",
            "public_dns": "ec2-50-17-97-206.compute-1.amazonaws.com",
            "public_ip": "50.17.97.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-0337919e11362600b",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "airbus-Jenkins-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef37284f92d76757",
            "tags": {
              "Name": "Airbus-Jenkins",
              "Project_Name": "airbus"
            },
            "tags_all": {
              "Name": "Airbus-Jenkins",
              "Project_Name": "airbus"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-046a460802614dfe5"
            ]
          },
          "dependencies": [
            "data.aws_iam_policy_document.ec2-policy-doc",
            "module.jenkins-keypair.aws_key_pair.keypair",
            "module.jenkins.data.template_file.user_data",
            "module.jenkins_instance_profile.aws_iam_instance_profile.ssms3fullaccess",
            "module.jenkinsrole.aws_iam_role.ssms3fullaccess",
            "module.sg-jenkins.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.sg-jenkins",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101031881943:security-group/sg-046a460802614dfe5",
            "description": "airbus-Jenkins-sg",
            "egress": [],
            "id": "sg-046a460802614dfe5",
            "ingress": [],
            "name": "airbus-Jenkins-sg",
            "name_prefix": "",
            "owner_id": "101031881943",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "airbus-Jenkins-sg",
              "Project_Name": "airbus"
            },
            "tags_all": {
              "Name": "airbus-Jenkins-sg",
              "Project_Name": "airbus"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcb6396b03b5b54b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.sg-jenkins",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "This is for internet access",
            "from_port": 0,
            "id": "sgrule-1584996871",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-046a460802614dfe5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg-jenkins.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.sg-jenkins",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "This is for internet access",
            "from_port": 0,
            "id": "sgrule-473485269",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-046a460802614dfe5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg-jenkins.aws_security_group.sg"
          ]
        }
      ]
    }
  ]
}